--- a/app/src/main/res/layout/event_cell.xml
+++ b/app/src/main/res/layout/event_cell.xml
@@ -10,61 +10,53 @@
     android:layout_marginTop="2dp"
     card_view:cardElevation="1dp">
 
-    <LinearLayout
+
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="99dp"
-        android:orientation="horizontal"
-        android:weightSum="3">
+        android:layout_height="65dp"
+        android:orientation="horizontal">
 
 
         <ImageView
-            android:id="@+id/EventImage"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="0.5"
-            card_view:srcCompat="@mipmap/ic_launcher" />
+            android:id="@+id/eventImage"
+            android:layout_width="50dp"
+            android:layout_marginLeft="8dp"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            card_view:srcCompat="@mipmap/ic_date_range_black_24dp" />
 
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="2"
-            android:orientation="vertical"
-            android:weightSum="3">
+        <TextView
+            android:id="@+id/eventName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="55dp"
+            android:layout_marginTop="10dp"
+            android:layout_toEndOf="@+id/eventImage"
+            android:text="MDW"
+            android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/eventName"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_marginLeft="30dp"
-                android:layout_marginTop="30dp"
-                android:layout_weight="1"
-                android:text="MDW"
-                android:textStyle="bold"
-                android:textSize="20dp" />
-
-            <TextView
-                android:id="@+id/eventDate"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_marginLeft="30dp"
-                android:layout_weight="2"
-                android:textSize="20dp"
-                android:text="1/4/2017"
-                android:textStyle="bold" />
-
-
-        </LinearLayout>
+        <TextView
+            android:id="@+id/eventDate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignStart="@+id/eventName"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="12dp"
+            android:text="5/7/2017"
+            android:textSize="10dp"
+            android:textStyle="italic" />
 
         <ImageButton
             android:id="@+id/imageButton"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:layout_weight="0.5"
-            android:background="#ffffff"
-            card_view:srcCompat="@android:drawable/ic_delete" />
+            android:layout_alignBottom="@+id/eventDate"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="13dp"
+            android:backgroundTint="@color/cardview_light_background"
+            card_view:srcCompat="@mipmap/ic_close_black_24dp" />
 
 
-    </LinearLayout>
-
+    </RelativeLayout>
 </android.support.v7.widget.CardView>
