--- a/app/src/main/res/layout/fragment_event.xml
+++ b/app/src/main/res/layout/fragment_event.xml
@@ -1,34 +1,37 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:weightSum="8"
     tools:context="com.jets.mad.itischeduleapp.UI.Fragment.EventFragment">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
 
     <TextView
         android:id="@+id/textView14"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="0.5"
+        android:layout_height="wrap_content"
         android:text="My Events"
+        android:gravity="center"
         android:textSize="20dp"
         android:textStyle="bold"/>
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/regEvents"
             android:layout_width="match_parent"
-            android:layout_weight="3"
-            android:layout_height="0dp" />
+            android:layout_height="wrap_content" />
 
 
     <TextView
         android:id="@+id/textView16"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="0.5"
+        android:layout_height="wrap_content"
         android:textSize="20dp"
+        android:gravity="center"
         android:textStyle="bold"
         android:text="Events" />
 
@@ -36,6 +39,7 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/nregEvents"
             android:layout_width="match_parent"
-            android:layout_weight="3"
-            android:layout_height="0dp" />
-</LinearLayout>
+            android:layout_height="wrap_content" />
+
+    </LinearLayout>
+</ScrollView>
