--- a/app/src/main/res/layout/cell_month.xml
+++ b/app/src/main/res/layout/cell_month.xml
@@ -6,33 +6,34 @@
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/day"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
         android:layout_gravity="center_horizontal"
+
         android:text="TextView" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/session1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_weight="1"
-        android:text="TextView" />
+        android:textSize="12sp"
+        android:singleLine="true" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/session2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_weight="1"
-        android:text="" />
+        android:textSize="12sp"
+        android:singleLine="true" />
     <TextView
-        android:id="@+id/textView545"
+        android:id="@+id/session3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_weight="1"
-        android:text="" />
+        android:textSize="12sp"
+        android:singleLine="true"/>
+
 </LinearLayout>
